# Tilted-Engine

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Changelog.txt  environment.yml  makefile
src/: Attacks.h  Attacks.inl  Bitboard.h  Bitboard.inl  Consts.h  Position.h  Tilted.Attacks.cppm  Tilted.Bitboard.cppm  Tilted.Consts.cppm  Tilted.Move.cppm  Tilted.Position.cppm  Tilted.Std.cppm  Tilted.Util.cppm  Tilted.Zobrist.cppm
tests/: CMakeLists.txt  attacks_test.cpp  bitboard_test.cpp  board_types.hpp
